# msc_citypage

./: 20250830T193948.467Z_MSC_CitypageWeather_s0000024_en.xml  Cargo.toml  LICENSE  README.md  build.rs
examples/: basic.rs  data.xml  deserialize.rs  simple.rs  site_list.rs  subscribe.rs
msc_citypage_sites/: Cargo.toml
msc_citypage_sites/examples/: site_list.rs
msc_citypage_sites/src/: lib.rs
schema_files/: forecastFull.xsd  general.xsd  site.xsd  siteList.xsd  weather.xsd
schemas/: forecastFull.xsd  general.xsd  site.xsd  weather.xsd
site_list_types/: Cargo.toml  siteList.xml
src/: consumer.rs  error.rs  lib.rs  schema.rs
src/client/: latest.rs  mod.rs  stream.rs
src/models/: general.rs  generated_schema.rs  mod.rs  site.rs  weather.rs
src/models/catalog/: mod.rs  site.rs
src/models/common/: date_stamp.rs  mod.rs  period.rs  serde_helpers.rs
src/models/current/: conditions.rs  icon_code.rs  mod.rs  station.rs
src/models/forecast/: daily.rs  icon_code.rs  mod.rs  shared.rs
src/models/forecast/hourly/: measurements.rs  mod.rs
src/models/general/: date_stamp.rs  mod.rs  year.rs
src/models/location/: mod.rs  province.rs  types.rs
src/models/measurements/: humidex.rs  humidity.rs  mod.rs  precipitation.rs  pressure.rs  temperature.rs  uv.rs  visibility.rs  wind.rs  wind_chill.rs
src/models/site_data/: mod.rs  site.rs
src/models/site_list/: mod.rs
src/models/warnings/: mod.rs
src/schemas/: custom.rs  generated.rs  mod.rs
src/sites/: macros.rs  mod.rs
