[package]
name = "msc_citypage"
version = "0.1.0"
edition = "2024"
description = "Retrieve weather conditions and forecasts for Canadian cities from the Meteorological Service of Canada (MSC) "
readme = "README.md"
repository = "https://github.com/thekakkun/msc_citypage"
license-file = "LICENSE"

[dependencies]
async-stream = "0.3.6"
chrono = "0.4.41"
futures-core = "0.3.31"
futures-util = "0.3.31"
hostname = "0.4.1"
lapin = "3.4.0"
quick-xml = { version = "0.38.3", features = ["encoding"] }
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
url = "2.5.7"
xsd-parser = "1.3.0"

[dev-dependencies]
reqwest = "0.12.23"

[build-dependencies]
chrono = "0.4.41"
proc-macro2 = "1.0.101"
quote = "1.0.40"
url = "2.5.7"
xsd-parser = "1.3.0"
