[package]
name = "msc_citypage"
version = "0.4.0"
edition = "2024"
description = "Retrieve weather conditions and forecasts for Canadian cities from the Meteorological Service of Canada (MSC)"
documentation = "https://docs.rs/msc_citypage/"
readme = "README.md"
repository = "https://github.com/thekakkun/msc_citypage"
license-file = "LICENSE"

[workspace]
members = [".", "msc_citypage_sites"]

[dependencies]
async-stream = "0.3.6"
chrono = "0.4.41"
chrono-tz = "0.10.4"
futures-core = "0.3.31"
futures-util = "0.3.31"
lapin = "3.4.0"
msc_citypage_sites = { path = "msc_citypage_sites", version = "0.1.0" }
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = "0.12.23"
scraper = "0.24.0"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3.31"
quick-xml = { version = "0.38.3", features = ["encoding", "serialize"] }
reqwest = "0.12.23"
url = "2.5.7"

[build-dependencies]
heck = "0.5"
msc_citypage_sites = { path = "msc_citypage_sites", version = "0.1.0" }
quick-xml = { version = "0.38.3", features = ["encoding", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
